# auto-maps

./: .gitignore  CLAUDE.md  README.md  pubspec.yaml
.github/workflows/: build-apple.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ecw_wrapper.c
android/app/src/main/kotlin/com/elitzur/auto_maps/: MainActivity.kt
android/app/src/main/res/values/: colors.xml
assets/: tessdata_config.json
ios/: Podfile  auto_maps_ecw.podspec  ecw_proj_init.m
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios_native/: build_gdal_xcframework.sh
ios_native/ecw_gdal/: link_probe_main.c
ios_native/ecw_spike/: CMakeLists.txt  spike_main.c
lib/: main.dart
lib/screens/: adjust_verify_screen.dart  georeference_screen.dart  home_screen.dart
lib/services/: ai_engine.dart  anchor_matcher.dart  elevation_service.dart  gdal_warp_service.dart  gemini_anchor_service.dart  geo_export_service.dart  grid_coord_service.dart  input_image_service.dart  livemaps_export_service.dart  mbtiles_writer_service.dart  ocr_service.dart  overpass_service.dart  pmtiles_writer_service.dart  reference_map_controller.dart  road_junction_detector.dart  terrain_names_service.dart  world_file_parser_service.dart
lib/services/ecw/: ecw_gdal_decoder.dart  ecw_gdal_tile_provider.dart  ecw_tile_layer_factory.dart  ecw_tile_server.dart  native_ecw_service.dart  win_job_object.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plugins/flutter_tesseract_ocr/: pubspec.yaml
plugins/flutter_tesseract_ocr/android/src/main/java/io/paratoner/flutter_tesseract_ocr/: FlutterTesseractOcrPlugin.java
scripts/: download_libecw.sh  ecw_tile_server.py  fetch_gdal_stack.sh
test/: grid_adaptive_test.dart  grid_speed_test.dart  names_engine_test.dart  names_real_map_probe.dart  ollama_payload_test.dart  widget_test.dart
tool/: _jc3.dart  classical_run_main.dart  color_hist.dart  hypotheses_probe.dart  junction_probe.dart  line_probe.dart  make_names_test_map.py  make_test_map.dart  make_test_maps.py  match_probe.dart  match_verify.dart  mbtiles_probe.dart  northup_probe.dart  ollama_run_main.dart  pmtiles_probe.dart  rotate_map.dart  sample_lum.dart  sweep_probe.dart  tps_harness.c  tune_probe.dart  wic_probe.dart
windows/: CMakeLists.txt
windows/ecw_native/: CMakeLists.txt  gdal_i.def  gdal_i.lib  wic_convert.cpp
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
